# template-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/dependencies/: auth.py
app/api/routes/: __init__.py  auth.py  items.py  users.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py
app/db/models/: item.py  user.py
app/schemas/: item.py  user.py
app/services/: item_service.py  user_service.py
migrations/: env.py
tests/: conftest.py
tests/test_api/: test_main.py  test_users.py
